--- a/src/style.css
+++ b/src/style.css
@@ -12,28 +12,6 @@ body{
     margin: 0;
     padding: 0;
 }
-
-#formExample{
-    display: none;
-}
-
-
-.slide { 
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-}
-#content{
-    display: flex;
-    flex-direction: row;
-    width: 400vw;
-    transform: rotate(90deg) translateY(-100vh);
-    transform-origin: top left ;
-}
-
-.one{background-color: var(--backgroundColor);}
-.two{background-color: blue;}
-.three{background-color: red;}
 #frame{
     width: 100vh;
     height: 100vw;
@@ -44,6 +22,18 @@ body{
     position: absolute;
     scrollbar-width: none;
     -ms-overflow-style:none;
+}
+#content{
+    display: flex;
+    flex-direction: row;
+    width: 400vw;
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left ;
+}
+.slide { 
+    width: 100vw;
+    height: 100vh;
+    position: relative;
 }
 ::-webkit-scrollbar{
     display: none;
@@ -58,7 +48,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 #verticalDevice p{
     width: 50%;
@@ -67,6 +56,15 @@ body{
     font-family: var(--fontFamily);
 
 }
+.one{background-color: var(--backgroundColor);}
+.two{background-color: blue;}
+.three{background-color: red;}
+
+
+#formExample{
+    display: none;
+}
+
 #verticalDevice img{
     width: 82px;
     height: 165px;
@@ -110,8 +108,6 @@ body{
 
 }
 .heading{
-    
-    
     text-transform: uppercase;
 }
 .icon{
@@ -134,6 +130,8 @@ body{
     height: 100vh;
     z-index: 1;
     position: fixed;
+    left: 10%;
+    top: 0%;
    
 
 }
@@ -142,6 +140,7 @@ body{
     justify-content: space-between;
     width: 80%;
     padding: 5% 10%;
+    position: relative;
 }
 #sideNav{
     width: 5%;
@@ -171,6 +170,8 @@ body{
     gap: 220px;
 }
 .leftArrow{
+    transform: rotate(180deg);
+
 }
 .line3{
     position: absolute;
