--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,11 @@ body{
 .slide { 
     width: 100vw;
     height: 100vh;
-    position: relative;
+    
 }
 ::-webkit-scrollbar{
     display: none;
 }
-
 #verticalDevice{
     background-color: var(--backgroundColor);
     width: 100vw;
@@ -56,15 +55,14 @@ body{
     font-family: var(--fontFamily);
 
 }
+
 .one{background-color: var(--backgroundColor);}
 .two{background-color: blue;}
 .three{background-color: red;}
 
-
 #formExample{
     display: none;
 }
-
 #verticalDevice img{
     width: 82px;
     height: 165px;
@@ -72,111 +70,16 @@ body{
 #imgContainer{
     display: flex;
 }
-.phone{
-    width: 100px;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    margin: 20px;
-}
-.phoneX{
-  top: 5%;
-    
-}
-.phoneY{
-    transform: rotate(90deg);
-    position: relative;
-    bottom: -23%;
-    left: 10%;
-}
-.windturbin{
-    width: 5%;
-    height:50%;
-    position: absolute;
-    bottom: -2%;
-    left: 25%;
-
-}
-.windturbinSpin{
-    width: 40%;
-    height: 60%;
-    position: absolute;
-    bottom: 15%;
-    left: 1%;
-}
-.btn{
-
-}
-.heading{
-    text-transform: uppercase;
-}
-.icon{
-    width: 30px;
-}
-#textContainer{
-    width: 439px;
-    height: 196px;
-    display: flex;
-    flex-direction: column;
-    font-family: var(--fontFamily);
-    color: var(--fontColor);
-    margin: auto;
-    position: relative;
-    top: 30%;
-    left: 13%;
-}
 #frameContainer{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 1;
-    position: fixed;
+    position: sticky;
     left: 10%;
     top: 0%;
    
 
 }
-#header{
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    padding: 5% 10%;
-    position: relative;
-}
-#sideNav{
-    width: 5%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    right: 0%;
-    top: 5%;
-    align-items: center;
-    gap: 15px;
-}
-.line{
-    width: 2px;
-    height: 30%;
-    background-color: var(--fontColor);
-}
-#bottomNav{
-    width: 100%;
-    position: absolute;
-    bottom: 10%;
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 220px;
-}
-.leftArrow{
-    transform: rotate(180deg);
-
-}
-.line3{
-    position: absolute;
-    bottom:-50px;
-    right: 2.5%;
-    width: 30%;
-    height: 2px;
+.icon{
+    width: 30px;
 }
