--- a/src/style22.css
+++ b/src/style22.css
@@ -1,138 +1,93 @@
-:root{
-    --backgroundColor : #212F2B;
-    --fontColor: #DDDDDD;
-    --fontSizeMobileV1: 20px;
-    --fontFamily: "Verdana";
-}
-html{
-    margin: 0;
-    padding: 0;
-}
-body{
-    margin: 0;
-    padding: 0;
-}
-#frame{
-    width: 100vh;
-    height: 100vw;
+
+#container{
+    width: 100vw;
+    height: 100vh;
     transform: rotate(-90deg) translateX(-100vh);
-    transform-origin: top left; 
+    transform-origin: top left;
     overflow-y: scroll;
     overflow-x: hidden;
     position: absolute;
     scrollbar-width: none;
     -ms-overflow-style:none;
-}
-#content{
-    display: flex;
-    flex-direction: row;
-    width: 400vw;
-    transform: rotate(90deg) translateY(-100vh);
-    transform-origin: top left ;
-}
-.slide { 
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-}
-::-webkit-scrollbar{
-    display: none;
-}
-#verticalDevice{
-    background-color: var(--backgroundColor);
-    width: 100vw;
-    height: 100vh;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#verticalDevice p{
-    width: 50%;
-    margin: 0 auto;
-    color: var(--fontColor);
-    font-family: var(--fontFamily);
-
-}
-#frame{
-    display: none;
-    max-width: 100%;
-    max-height: 100vh;
-    transform: rotate(-90deg) translateX(-100vh);
-    transform-origin: top left; 
-    position: fixed;
-    scrollbar-width: none;
-    -ms-overflow-style:none;
-}
-
-.one{background-color: var(--backgroundColor);}
-.two{background-color: blue;}
-.three{background-color: red;}
-
-#formExample{
-    display: none;
-}
-#verticalDevice img{
-    width: 82px;
-    height: 165px;
-}
-#imgContainer{
-    display: flex;
-}
-#frameContainer{
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    position: sticky;
-    left: 10%;
-    top: 0%;
-   
-
-}
-.icon{
-    width: 30px;
-}
-
-.phone{
-    width: 100px;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    margin: 20px;
-}
-.phoneX{
-  top: 5%;
     
 }
-.phoneY{
-    transform: rotate(90deg);
+
+#row{
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    white-space: nowrap;
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left;
+}
+.section{
+    max-width: 100vw;
+    height: 100vh;
+    background-color: var(--backgroundColor);
+    display: inline-block;
     position: relative;
-    bottom: -23%;
-    left: 10%;
 }
-.windturbin{
-    width: 5%;
-    height:50%;
-    position: absolute;
-    bottom: -2%;
-    left: 25%;
+
+
+
+
+
+
+.line1{
 
 }
-.windturbinSpin{
-    width: 40%;
-    height: 60%;
+.line2{
+
+}
+
+
+
+
+#pageNumber{
     position: absolute;
+    z-index: -2;
+    right: 15%;
+    color: var(--fontColor);
+}
+#pageNumber h1{
+    font-size: 10px;
+    font-weight: normal;
+}
+#pageNumber h1 span{
+    font-size: 15px;
+    font-weight: bold;
+
+}
+.leftArrow{
+    transform: rotate(180deg);
+    position: relative;
+    left: 8%;
     bottom: 15%;
-    left: 1%;
+    z-index: -3;
 }
-.btn{
+.rightArrow{
+    position: relative;
+    right: 8%;
+    bottom: 15%;
+    z-index: 10;
+}
+.showInfo{
+    width: 70%;
+    height: 70%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+}
 
-}
-.heading{
-    text-transform: uppercase;
+#content{
+    height: 100%
 }
 
+#canva{
+    background-image: url(../img/background.png);
+    width: 100%;
+    height: 100%;
+}
 #textContainer{
     width: 439px;
     height: 196px;
@@ -142,35 +97,7 @@ body{
     color: var(--fontColor);
     margin: auto;
     position: relative;
-    top: 30%;
+    top: 0%;
     left: 13%;
-}
-#header{
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    padding: 5% 10%;
-   height: 20px;
-   position: absolute;
-   z-index: 1;
-}
-#sideNav{
-    position: absolute;
-    z-index: 1;
-    right: 0%;
-}
-#bottomNav{
-    position: absolute;
-    bottom: 5%;
-    z-index: 1;
-}
-.showInfo{
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--backgroundColor);
-}
-#firstThree{
-    width: 100%;
-    height: 100%;
-    display: none;
+    align-items: center;
 }
