--- a/src/style.css
+++ b/src/style.css
@@ -55,10 +55,173 @@ html,body,.main-container,.container{
     margin-bottom: 20px;
     left: 220px;
 }
-.scrollCursor{
-    width: 20px;
-    height: 20px;
+.mouse{
+    width: 52px;
+    height: 89px;
+    position: relative;
+    bottom: 20%;
+    background: #4e5559 linear-gradient(transparent 0%, transparent 50%,
+                         #ffffff 50%, #ffffff 100%);
+    background-size: 100% 200%;
+    border-radius: 100px;
+    animation: colorSlide 5s linear infinite,
+        nudgeMouse 5s ease-out infinite;
+    
 }
+.mouse:before,
+.mouse:after{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.mouse:before{
+    width: 46px;
+    height: 82px;
+    background-color: #30333a;
+    border-radius: 100px;
+}
+.mouse:after{
+    background-color: #ffffff;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    animation: trackBallSlide 5s linear infinite;
+}
+@keyframes colorSlide{
+    0%{
+        background-position: 0% 100%;
+    }
+    20%{
+        background-position: 0% 0%;
+    }
+    21%{
+        background-color: #4e5559;
+    }
+    29.99%{
+        background-color: #ffffff;
+        background-position: 0% 0%;
+    }
+    30%{
+        background-color: #4e5559;
+        background-position: 0% 100%;
+    }
+    50%{
+        
+        background-position: 0% 0%;
+    }
+    51%{
+        background-color: #4e5559;
+    }
+    59%{
+        background-color: #ffffff;
+        background-position: 0% 0%;
+    }
+    60%{
+        background-color: #4e5559;
+        background-position: 0% 100%;
+    }
+    80%{
+        
+        background-position: 0% 0%;
+    }
+    81%{
+        
+        background-color: #4e5559;
+    }
+    90%,100%{
+        background-color: #ffffff;
+    }
+}
+@keyframes trackBallSlide{
+    0%{
+        opacity: 1;
+        transform: scale(1) translateY(-20px);
+    }
+    6%{
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    14%{
+        opacity: 0;
+        transform: scale(0.4) translateY(40px);
+    }
+    15%, 19%{
+        opacity: 0;
+        transform: scale(0.4) translateY(-20px);
+    }
+    28%, 29.99%{
+        opacity: 1;
+        transform: scale(1) translateY(-20px);
+    }
+    30%{
+        opacity: 1;
+        transform: scale(1) translateY(-20px);
+    }
+    36%{
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    44%{
+        opacity: 0;
+        transform: scale(0.4) translateY(40px);
+    }
+    45%,49%{
+        opacity: 0;
+        transform: scale(0.4) translateY(-20px);
+    }
+    58%,59.99%{
+        opacity: 1;
+        transform: scale(1) translateY(-20px);
+    }
+    60%{
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    66%{
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    74%{
+        opacity: 0;
+        transform: scale(0.4) translateY(40px);
+    }
+    75%,79%{
+        opacity: 0;
+        transform: scale(0.4) translateY(-20px);
+    }
+    88%,100%{
+        opacity: 1;
+        transform: scale(1) translateY(-20px);
+    }
+}
+@keyframes nudgeMouse{
+    0%{
+        transform: translateY(0)
+    }
+    20%{
+        transform: translateY(8px)
+    }
+    30%{
+        transform: translateY(0)
+    }
+    50%{
+        transform: translateY(8px)
+    }
+    60%{
+        transform: translateY(0)
+    }
+    80%{
+        transform: translateY(8px)
+    }
+    90%{
+        transform: translateY(0)
+    }
+}
+
 .windturbin{
     width: 5%;
     height:50%;
@@ -179,11 +342,7 @@ html,body,.main-container,.container{
     z-index: 13;
 }
 #scrollReplace{
-    width: 9%;
-    height: auto;
-    position: relative;
     bottom: 10px;
-
 }
 #header{
     position: fixed;
@@ -382,4 +541,38 @@ img{
 #spanReplace {
      font-weight: 300;
 }
-
+#finalVideoContainer{
+    width: 80%;
+    
+    height: 60%;
+    position: absolute;
+    top: 18%;
+    left: 10%;
+    z-index: 222;
+    display: flex;
+    flex-direction: row;
+}
+#video{
+    width: 70%;
+    background-color: red;
+}
+#sectionWithEffects{
+    width: 30%;
+    background-color: green;
+}
+#dots{
+    position: absolute;
+    bottom: 0%;
+    right: -10%;
+    width: 200px;
+    height: auto;
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+}
+.dot{
+    width: 10px;
+    height: 10px;
+    border-radius: 100px;
+    background-color: var(--fontColor);
+}
